--- a/cake_site/store/templates/store.html
+++ b/cake_site/store/templates/store.html
@@ -39,8 +39,8 @@
                     </div>
                 </div>
                 <div class="hidden md:flex items-center space-x-6">
-                    <a href="#home" class="text-chocolate hover:text-royal-purple transition">Home</a>
-                    <a href="#cakes" class="text-chocolate hover:text-royal-purple transition">Cakes</a>
+                    <a href="{% url 'home' %}" class="text-chocolate hover:text-royal-purple transition">Home</a>
+                    <a href="{% url 'cakes' %}" class="text-chocolate hover:text-royal-purple transition">Cakes</a>
                     <a href="#categories" class="text-chocolate hover:text-royal-purple transition">Categories</a>
                     <a href="#about" class="text-chocolate hover:text-royal-purple transition">About</a>
                     <a href="#contact" class="text-chocolate hover:text-royal-purple transition">Contact</a>
